desktop review section fixed (resized picture and h2 title aligning.

--- a/css/main.css
+++ b/css/main.css
@@ -118,14 +118,14 @@ a {
   color: #e2e3ed;
   text-decoration: none;
 }
-			nav ul li a.active, nav ul li a:hover {
+		/*	nav ul li a.active, nav ul li a:hover {
 				display: block;
 				margin: 10px 0;
 				padding: 10px;
 			  color: darkgreen;
 			  text-decoration: none;
 			  transition: 0.10s;	
-}
+}*/
  
 h2 {
   font-family: 'Poppins', sans-serif;
@@ -182,7 +182,8 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 0;	
+  margin: 0;
+		
 }
 
 header figure {
@@ -264,6 +265,10 @@ footer .copyright {
   margin: 20px 0;
 }
 
+header li:hover,
+header li:active{
+    background-color: #527158;
+}
 
 				/* -------------------- Mobile Styles - Homepage -------------------- */
 
@@ -888,6 +893,9 @@ p {
 .reviews h3 {
     width: 222%;	
 }
+	.reviews img{
+		width: 10%;
+	}	
 	
  .reviews article  p {
     width: 440%;
